--- a/sandbox/package.json
+++ b/sandbox/package.json
@@ -1,10 +1,16 @@
 {
   "type": "module",
   "dependencies": {
+    "jimp": "^0.22.10",
     "mle-js-oracledb": "^23.3.0",
-    "mocha": "^10.2.0",
     "oracledb": "^6.2.0",
+    "sentiment": "^5.0.2",
+    "sql-assert": "^1.0.2",
+    "sql-template-tag": "^5.1.0",
     "validator": "^13.11.0"
+  },
+  "devDependencies": {
+    "mocha": "^10.2.0"
   },
   "scripts": {
     "test": "mocha --timeout 300000"
