enable no-explicit-any rule for eslint

--- a/sandbox2/.eslintrc
+++ b/sandbox2/.eslintrc
@@ -9,7 +9,6 @@
         "prettier"
     ],
     "rules": {
-        "no-console": "error",
-        "@typescript-eslint/no-explicit-any": "off"
+        "no-console": "error"
     }
 }
