--- a/sandbox2/package.json
+++ b/sandbox2/package.json
@@ -18,10 +18,11 @@
         "@vitest/coverage-v8": "^0.34.6",
         "eslint": "^8.52.0",
         "eslint-config-prettier": "^9.0.0",
-        "oracledb": "^6.2.0",
+        "oracledb": "^6.3.0",
         "prettier": "^3.0.3",
         "typescript": "^5.2.2",
-        "vitest": "^0.34.6"
+        "vitest": "^0.34.6",
+        "sql-template-tag": "5.2.0"
     },
     "dependencies": {
         "sql-assert": "^1.0.4"
