--- a/sandbox2/package.json
+++ b/sandbox2/package.json
@@ -15,13 +15,13 @@
         "@types/oracledb": "^6.0.3",
         "@typescript-eslint/eslint-plugin": "^6.9.1",
         "@typescript-eslint/parser": "^6.9.1",
-        "@vitest/coverage-v8": "^1.5.0",
+        "@vitest/coverage-v8": "0.34.6",
         "eslint": "^8.52.0",
         "eslint-config-prettier": "^9.0.0",
         "oracledb": "^6.3.0",
         "prettier": "^3.0.3",
         "typescript": "^5.2.2",
-        "vitest": "^1.5.0",
+        "vitest": "0.34.6",
         "sql-template-tag": "5.2.0"
     },
     "dependencies": {
