--- a/sandbox3/tsconfig.json
+++ b/sandbox3/tsconfig.json
@@ -2,8 +2,8 @@
     "compilerOptions": {
         "rootDir": "./src",
         "target": "ES2022",
-        "module": "ES2022",
-        "moduleResolution": "node",
+        "module": "NodeNext",
+        "moduleResolution": "NodeNext",
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "strict": true,
